<resources>
    <string name="app_name">MsgHash</string>
    <string name="family_name">msghash</string>
    <string name="family_version">1.0</string>

    <string name="text">Text</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="short_time">Short time</string>
    <string name="send">Send</string>
    <string name="hash">Hash</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="network">Network</string>
    <string name="url">URL</string>
    <string name="url_desc">Define URL of the REST API (including http://)</string>
    <string name="port">Port</string>
    <string name="port_desc">Set network port of the REST API</string>

    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="copy_hash">Copy hash</string>
    <string name="copy_address">Copy address</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="manage_keys">Manage keys</string>
    <string name="manage_keys_desc">Actions with public and private keys</string>
    <string name="check_hash">Check hashing library</string>
    <string name="check_hash_desc">Hash string \"sample\" with sha512</string>
    <string name="custom_message">Add custom message</string>
    <string name="custom_message_sum">Add message with custom time</string>
    <string name="keys">Keys</string>
    <string name="debug">Debug</string>
    <string name="copy_private">Copy private key</string>
    <string name="copy_private_hex">Copy private key hex</string>
    <string name="copy_public">Copy public key</string>
    <string name="copy_public_hex">Copy public key hex</string>
    <string name="set_keys">Set keys</string>
    <string name="coming_soon">Coming soon!</string>

    <string name="custom_message_notification">Message will appear after restart of the app</string>
    <string name="copied">Copied to clipboard</string>
    <string name="error">Error!</string>
</resources>
